1.7.9
-----
(RB=128251)
Add javadoc to rest.li docgen and include restspec.json files as resource in rest.li server jars.

1.7.8
-----
(RB=119453)
Add default value handling for query parameter in complex type, including all DataTemplate subclasses, array of simple types and complex types.
Union can be used as query parameter type.

(RB=127439)
Fix NPE resulting from calling .getEntityClass() on an ActionResponseDecoder for a void-returning Action. 

1.7.7
-----
(RB=123370)
Add TextDataCodec to support serializing and deserializing to String, Writer and Reader.
Move getStringEncoding() from DataCodec to TextDataCodec interface. This is potentially
a backwards incompatible change.

Replace use of ByteArrayInputStream(string.getBytes(Data.UTF_8_CHARSET)) with new JacksonDataCodec
and SchemaParser APIs that take String as input.

1.7.6
-----
(RB=122933)
If union is named because it is typeref'ed, the typeref schema was
originally not available through the generated code. This change
add a new HasTyperefInfo interface. If the union is named through
through typeref, the generated subclass of UnionTemplate will also
implement this interface. This interface provides the TyperefInfo
of the typeref that names the union.

(RB=121895)
Fix encoding bug in QueryTunnel Util.
Make ByteString.toString() to return a summary instead of the whole
array as an Avro string.
HttpBridge for RPC requests should not log the whole entity.
Remove Entity body from Request/Response toString().

(RB=122813)
restli-docgen displays all nested subresources and related models in the JSON format.

1.7.5
-----
(RB=122512)
Move PsonDataCodec from test to main source dir.

1.7.4
-----
(RB=122372)
RequestContext should not be shared across requests in ParSeqRestClient

1.7.3
-----
(RB=122016)
Add support for Avro 1.6. To use Avro 1.6, depend on data-avro_1_6.
Also fix getBytes() to explicitly specify UTF-8. This has no impact
on platforms whose default encoding is UTF-8.

(RB=121948)